--- a/config/custom_gui_layout.ini
+++ b/config/custom_gui_layout.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,21
-Size=1280,915
+Pos=0,19
+Size=1280,917
 Collapsed=0
 
 [Window][###23]
@@ -19,17 +19,53 @@ DockId=0x00000003,0
 Pos=463,388
 Size=817,548
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000A,0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][###29]
+Pos=0,19
+Size=419,917
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][###33]
+Pos=469,19
+Size=811,351
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][###36]
+Pos=469,372
+Size=811,564
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][###34]
+Pos=421,19
+Size=859,341
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][###37]
+Pos=421,362
+Size=859,574
+Collapsed=0
+DockId=0x0000000A,0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,21 Size=1280,915 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=461,917 Selected=0x9A6F6FC7
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=817,917 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=817,365 Selected=0x9D02ABDE
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=817,550 CentralNode=1 Selected=0x1A7D0F3C
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,917 Split=X
+  DockNode          ID=0x00000005 Parent=0x8B93E3BD SizeRef=419,917 Selected=0x7ABA86D9
+  DockNode          ID=0x00000006 Parent=0x8B93E3BD SizeRef=859,917 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000006 SizeRef=461,917 Selected=0x9A6F6FC7
+    DockNode        ID=0x00000002 Parent=0x00000006 SizeRef=817,917 Split=Y
+      DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=817,365 Selected=0x9D02ABDE
+      DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=817,550 Split=Y Selected=0x1A7D0F3C
+        DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=930,351 Selected=0x83745E86
+        DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=930,564 Split=Y Selected=0xF31EAA09
+          DockNode  ID=0x00000007 Parent=0x00000009 SizeRef=811,341 Selected=0x1D10CB25
+          DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=811,574 CentralNode=1 Selected=0x84199A9F
 
